--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "illuminate/support": "^8.0",
         "league/flysystem": "^1.1.3",
         "phpdocumentor/reflection-docblock": "^5.2",
-        "spatie/better-types": "dev-main",
+        "spatie/better-types": "0.1.0",
         "spatie/laravel-package-tools": "^1.9",
         "spatie/laravel-schemaless-attributes": "^1.0|^2.0",
         "symfony/finder": "^4.2|^5.0",
